--- a/appspec.yml
+++ b/appspec.yml
@@ -2,13 +2,15 @@ version: 0.0
 os: linux
 
 files:
-  - source: files/newpage.html
+  - source: files/index.html
     destination: /var/www/html
 
 permissions:
   - object: /var/www/html
-    pattern: newpage.html
-    mode: 755
+    pattern: index.html
+    owner: apache
+    group: apache
+    mode: 644
     type:
       - file
 
@@ -16,7 +18,7 @@ hooks:
 #max timeout for all beforeinstall and after install is 3600
   BeforeInstall:
     - location: scripts/webserver-stop.sh
-      timeout: 300
+    - location: scripts/delete-old-index.sh
   AfterInstall:
+    - location: scripts/sleep.sh
     - location: scripts/webserver-start.sh
-      timeout: 300
